--- a/miniSlicer/SlicerExtension-VMTK/ArterialCalcificationPreProcessor/Resources/UI/ArterialCalcificationPreProcessor.ui
+++ b/miniSlicer/SlicerExtension-VMTK/ArterialCalcificationPreProcessor/Resources/UI/ArterialCalcificationPreProcessor.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ArterialCalcificationPreProcessor</class>
  <widget class="qMRMLWidget" name="ArterialCalcificationPreProcessor">
@@ -16,7 +15,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="parameterSetLabel">
        <property name="text">
-        <string>Parameter set:</string>
+        <string>参数集：</string>
        </property>
       </widget>
      </item>
@@ -40,21 +39,21 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>A parameter set groups parameters that define a named study distinctly.</string>
+          <string>参数集将定义一个命名研究的参数分组。</string>
          </property>
          <property name="nodeTypes">
           <stringlist notr="true">
-           <string>vtkMRMLScriptedModuleNode</string>
+           <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
           </stringlist>
          </property>
          <property name="showHidden">
           <bool>true</bool>
          </property>
          <property name="hideChildNodeTypes">
-          <stringlist notr="true"/>
+          <stringlist notr="true" />
          </property>
          <property name="baseName">
-          <string notr="true">ArterialCalcificationPreProcessor</string>
+          <string notr="true">动脉钙化预处理器</string>
          </property>
          <property name="noneEnabled">
           <bool>false</bool>
@@ -63,7 +62,7 @@
           <bool>true</bool>
          </property>
          <property name="interactionNodeSingletonTag">
-          <string notr="true"/>
+          <string notr="true" />
          </property>
          <property name="selectNodeUponCreation">
           <bool>true</bool>
@@ -85,7 +84,7 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Update the segment editor and the slice views with the input segmentation and volume if any.</string>
+          <string>如果有输入分割和体积，更新分割编辑器和切片视图。</string>
          </property>
          <property name="text">
           <string>↺</string>
@@ -99,20 +98,20 @@
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="inputSegmentSelectorLabel">
         <property name="text">
-         <string>Segmentation:</string>
+         <string>分割：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="qMRMLSegmentSelectorWidget" name="inputSegmentSelector">
         <property name="toolTip">
-         <string>Select an input lumen segment.</string>
+         <string>选择一个输入腔段。</string>
         </property>
         <property name="noneEnabled">
          <bool>true</bool>
@@ -125,22 +124,22 @@
       <item row="1" column="0">
        <widget class="QLabel" name="inputVolumeLabel">
         <property name="text">
-         <string>Volume:</string>
+         <string>体积：</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="qMRMLNodeComboBox" name="inputVolumeSelector">
         <property name="toolTip">
-         <string>Select the source volume node of the selected segment.</string>
+         <string>选择所选段的源体积节点。</string>
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLScalarVolumeNode</string>
+          <string>标量体积节点 (vtkMRMLScalarVolumeNode)</string>
          </stringlist>
         </property>
         <property name="hideChildNodeTypes">
-         <stringlist notr="true"/>
+         <stringlist notr="true" />
         </property>
         <property name="noneEnabled">
          <bool>true</bool>
@@ -155,24 +154,24 @@
          <bool>true</bool>
         </property>
         <property name="interactionNodeSingletonTag">
-         <string notr="true"/>
+         <string notr="true" />
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="inputMarginLabel">
         <property name="text">
-         <string>Margin:</string>
+         <string>边距：</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QDoubleSpinBox" name="inputMarginSpinBox">
         <property name="toolTip">
-         <string>Segment calcification around the lumen within this margin.</string>
+         <string>在此边距内对腔周围的钙化进行分割。</string>
         </property>
         <property name="suffix">
-         <string> mm</string>
+         <string>毫米</string>
         </property>
         <property name="decimals">
          <number>1</number>
@@ -204,10 +203,10 @@
    <item>
     <widget class="ctkMenuButton" name="applyButton">
      <property name="toolTip">
-      <string>Run the algorithm.</string>
+      <string>运行算法。</string>
      </property>
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -243,7 +242,7 @@
    <header>qMRMLSegmentSelectorWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>ArterialCalcificationPreProcessor</sender>
