--- a/miniSlicer/SlicerExtraMarkups/Shape/Widgets/Resources/UI/qMRMLMarkupsShapeOptionsWidget.ui
+++ b/miniSlicer/SlicerExtraMarkups/Shape/Widgets/Resources/UI/qMRMLMarkupsShapeOptionsWidget.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qMRMLMarkupsShapeOptionsWidget</class>
  <widget class="QWidget" name="qMRMLMarkupsShapeOptionsWidget">
@@ -11,11 +10,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>表单</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="qMRMLMarkupsShapeWidget" name="MarkupsShapeWidget" native="true"/>
+    <widget class="qMRMLMarkupsShapeWidget" name="MarkupsShapeWidget" native="true" />
    </item>
   </layout>
  </widget>
@@ -27,6 +26,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
- <connections/>
+ <resources />
+ <connections />
 </ui>
