--- a/miniSlicer/LanguageTools/Resources/UI/LanguageTools.ui
+++ b/miniSlicer/LanguageTools/Resources/UI/LanguageTools.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>LanguageTools</class>
  <widget class="qMRMLWidget" name="LanguageTools">
@@ -14,17 +13,17 @@
    <item row="8" column="0">
     <widget class="QPushButton" name="updateButton">
      <property name="toolTip">
-      <string>Download, compile, and install latest translations</string>
+      <string>下载、编译并安装最新翻译</string>
      </property>
      <property name="text">
-      <string>Update translation files</string>
+      <string>更新翻译文件</string>
      </property>
     </widget>
    </item>
    <item row="6" column="0">
     <widget class="ctkCollapsibleButton" name="settingsCollapsibleButton">
      <property name="text">
-      <string>Advanced settings</string>
+      <string>高级设置</string>
      </property>
      <property name="collapsed">
       <bool>true</bool>
@@ -36,17 +35,17 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Qt 'lrelease' tool path:</string>
+         <string>Qt '''lrelease''' 工具路径：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="ctkPathLineEdit" name="lreleasePathLineEdit">
         <property name="toolTip">
-         <string>Path to Qt lrelease executable. Leave empty to use default (the one bundled with the Slicer installer or available in system paths).</string>
+         <string>Qt lrelease 可执行文件的路径。留空以使用默认值（与 Slicer 安装程序捆绑的或在系统路径中可用的）。</string>
         </property>
         <property name="settingKey">
-         <string notr="true"/>
+         <string notr="true" />
         </property>
         <property name="showHistoryButton">
          <bool>false</bool>
@@ -56,14 +55,14 @@
       <item row="1" column="0">
        <widget class="QLabel" name="slicerVersionLabel">
         <property name="text">
-         <string>Slicer version:</string>
+         <string>Slicer 版本：</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="slicerVersionEdit">
         <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;master, 4.13, 4.14, ...&lt;/p&gt;&lt;p&gt;Only used for GitHub.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&amp;lt;html&amp;gt;&amp;lt;head/&amp;gt;&amp;lt;body&amp;gt;&amp;lt;p&amp;gt;主分支，4.13，4.14，...&amp;lt;/p&amp;gt;&amp;lt;p&amp;gt;仅用于 GitHub.&amp;lt;/p&amp;gt;&amp;lt;/body&amp;gt;&amp;lt;/html&amp;gt;</string>
         </property>
         <property name="text">
          <string notr="true">main</string>
@@ -73,48 +72,48 @@
       <item row="3" column="0">
        <widget class="QLabel" name="gitRepositoryLabel">
         <property name="text">
-         <string>GitHub repository URL:</string>
+         <string>GitHub 仓库 URL：</string>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="githubRepositoryUrlEdit">
         <property name="toolTip">
-         <string>Github repository that stores the translated strings.</string>
+         <string>存储翻译字符串的 GitHub 仓库。</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="weblateDownloadUrlLabel">
         <property name="text">
-         <string>Weblate download URL:</string>
+         <string>Weblate 下载 URL：</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="weblateDownloadUrlEdit">
         <property name="toolTip">
-         <string>Weblate project that stores the translated strings.</string>
+         <string>存储翻译字符串的 Weblate 项目。</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Translation file folders:</string>
+         <string>翻译文件夹：</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
        <widget class="ctkFittedTextBrowser" name="translationFoldersTextBrowser">
         <property name="toolTip">
-         <string>List of folders where the application looks for translations. This is for information only, the paths cannot be changed.</string>
+         <string>应用程序查找翻译的文件夹列表。此信息仅供参考，路径无法更改。</string>
         </property>
         <property name="readOnly">
          <bool>false</bool>
@@ -123,7 +122,7 @@
          <bool>true</bool>
         </property>
         <property name="showDetailsText">
-         <string>Show more...</string>
+         <string>显示更多...</string>
         </property>
        </widget>
       </item>
@@ -148,7 +147,7 @@
      <item>
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Application language:</string>
+        <string>应用程序语言：</string>
        </property>
       </widget>
      </item>
@@ -161,7 +160,7 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Change only takes effect after restarting the application.</string>
+        <string>更改仅在重新启动应用程序后生效。</string>
        </property>
        <property name="countryFlagsVisible">
         <bool>false</bool>
@@ -171,10 +170,10 @@
      <item>
       <widget class="QPushButton" name="restartButton">
        <property name="toolTip">
-        <string>Restart the application to see updated translations on the graphical user interface.</string>
+        <string>重新启动应用程序以查看图形用户界面上的更新翻译。</string>
        </property>
        <property name="text">
-        <string>Restart the application</string>
+        <string>重新启动应用程序</string>
        </property>
       </widget>
      </item>
@@ -190,7 +189,7 @@
    <item row="4" column="0">
     <widget class="ctkCollapsibleButton" name="outputsCollapsibleButton">
      <property name="text">
-      <string>Input translations</string>
+      <string>输入翻译</string>
      </property>
      <property name="collapsedHeight">
       <number>6</number>
@@ -199,7 +198,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="localTsFolderLabel">
         <property name="text">
-         <string>Input folder:</string>
+         <string>输入文件夹：</string>
         </property>
         <property name="indent">
          <number>20</number>
@@ -209,7 +208,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="languagesLabel">
         <property name="text">
-         <string>Languages:</string>
+         <string>语言：</string>
         </property>
         <property name="indent">
          <number>20</number>
@@ -219,28 +218,28 @@
       <item row="0" column="0" colspan="3">
        <widget class="QRadioButton" name="weblateSourceRadioButton">
         <property name="text">
-         <string>Weblate (latest translations)</string>
+         <string>Weblate（最新翻译）</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0" colspan="3">
        <widget class="QRadioButton" name="githubSourceRadioButton">
         <property name="text">
-         <string>GitHub (updated daily)</string>
+         <string>GitHub（每日更新）</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0" colspan="3">
        <widget class="QRadioButton" name="localTsFolderRadioButton">
         <property name="text">
-         <string>Local folder (for offline use)</string>
+         <string>本地文件夹（离线使用）</string>
         </property>
        </widget>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="latestTsFileOnlyLabel">
         <property name="text">
-         <string>Latest file only:</string>
+         <string>仅最新文件：</string>
         </property>
         <property name="indent">
          <number>20</number>
@@ -250,24 +249,24 @@
       <item row="1" column="3">
        <widget class="QToolButton" name="languagesListRefreshButton">
         <property name="toolTip">
-         <string>Refresh Weblate language list by querying the Weblate server.</string>
+         <string>通过查询 Weblate 服务器刷新 Weblate 语言列表。</string>
         </property>
         <property name="text">
-         <string>refresh</string>
+         <string>刷新</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
        <widget class="ctkCheckableComboBox" name="languagesComboBox">
         <property name="toolTip">
-         <string>Select language(s) that will be downloaded and installed.</string>
+         <string>选择要下载和安装的语言。</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1" colspan="3">
        <widget class="ctkPathLineEdit" name="localTsFolderPathLineEdit">
         <property name="toolTip">
-         <string>Folder containing translation (.ts) files.</string>
+         <string>包含翻译（.ts）文件的文件夹。</string>
         </property>
         <property name="settingKey">
          <string notr="true">Internationalization/LanguageTools/LocalTsFolderPathHistory</string>
@@ -285,7 +284,7 @@
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If this option is checked then only the latest .ts file in the folder will be used. Enable this option to ignore previously downloaded .ts files are saved in the same folder.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
         <property name="checked">
          <bool>true</bool>
@@ -298,7 +297,7 @@
    <item row="12" column="0">
     <widget class="ctkCollapsibleButton" name="CollapsibleButton">
      <property name="text">
-      <string>Find text</string>
+      <string>查找文本</string>
      </property>
      <property name="collapsed">
       <bool>false</bool>
@@ -310,7 +309,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Enable text finder:</string>
+         <string>启用文本查找器：</string>
         </property>
        </widget>
       </item>
@@ -319,10 +318,10 @@
         <item>
          <widget class="QCheckBox" name="enableTextFindercheckBox">
           <property name="toolTip">
-           <string>If enabled, then the shortcut opens the text finder, which can be used to extract text from the application user interface and open it in the translation website.</string>
+           <string>如果启用，则快捷键将打开文本查找器，可用于从应用程序用户界面提取文本并在翻译网站中打开。</string>
           </property>
           <property name="text">
-           <string/>
+           <string />
           </property>
          </widget>
         </item>
@@ -334,7 +333,7 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
        </widget>
       </item>
@@ -344,7 +343,7 @@
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>Keyboard shortcut:</string>
+         <string>键盘快捷键：</string>
         </property>
        </widget>
       </item>
@@ -387,7 +386,7 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>enableTextFindercheckBox</sender>
