--- a/miniSlicer/Modules/Scripted/Home/Resources/UI/Home.ui
+++ b/miniSlicer/Modules/Scripted/Home/Resources/UI/Home.ui
@@ -52,7 +52,7 @@
       <item row="1" column="1">
        <widget class="QLineEdit" name="modelNameLineEdit">
         <property name="text">
-         <string>ImportedSTLModel</string>
+         <string>已导入STL模型</string>
         </property>
        </widget>
       </item>
