--- a/miniSlicer/SlicerExtension-VMTK/BranchClipper/Resources/UI/qSlicerBranchClipperWidget.ui
+++ b/miniSlicer/SlicerExtension-VMTK/BranchClipper/Resources/UI/qSlicerBranchClipperWidget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Foo bar</string>
+   <string>示例</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="margin">
@@ -20,7 +20,7 @@
    <item>
     <widget class="QPushButton" name="Button">
      <property name="text">
-      <string>Foo Bar</string>
+      <string>示例</string>
      </property>
     </widget>
    </item>
