--- a/miniSlicer/SlicerExtension-VMTK/CenterlineDisassembly/Resources/UI/CenterlineDisassembly.ui
+++ b/miniSlicer/SlicerExtension-VMTK/CenterlineDisassembly/Resources/UI/CenterlineDisassembly.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>CenterlineDisassembly</class>
  <widget class="qMRMLWidget" name="CenterlineDisassembly">
@@ -16,7 +15,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="parameterSetLabel">
        <property name="text">
-        <string>Parameter set:</string>
+        <string>参数集：</string>
        </property>
       </widget>
      </item>
@@ -26,21 +25,21 @@
         <bool>false</bool>
        </property>
        <property name="toolTip">
-        <string>A parameter set groups parameters that define a named study distinctly.</string>
+        <string>参数集将定义特定命名研究的参数分组。</string>
        </property>
        <property name="nodeTypes">
         <stringlist notr="true">
-         <string>vtkMRMLScriptedModuleNode</string>
+         <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
         </stringlist>
        </property>
        <property name="showHidden">
         <bool>true</bool>
        </property>
        <property name="hideChildNodeTypes">
-        <stringlist notr="true"/>
+        <stringlist notr="true" />
        </property>
        <property name="baseName">
-        <string notr="true">CenterlineDisassembly</string>
+        <string notr="true">中心线拆解</string>
        </property>
        <property name="noneEnabled">
         <bool>false</bool>
@@ -49,7 +48,7 @@
         <bool>true</bool>
        </property>
        <property name="interactionNodeSingletonTag">
-        <string notr="true"/>
+        <string notr="true" />
        </property>
        <property name="selectNodeUponCreation">
         <bool>true</bool>
@@ -61,13 +60,13 @@
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="inputSectorLabel">
         <property name="text">
-         <string>Centerline model:</string>
+         <string>中心线模型：</string>
         </property>
        </widget>
       </item>
@@ -77,11 +76,11 @@
          <bool>true</bool>
         </property>
         <property name="toolTip">
-         <string>Pick the input to the algorithm.</string>
+         <string>选择算法的输入。</string>
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLModelNode</string>
+          <string>模型节点 (vtkMRMLModelNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -110,14 +109,14 @@
       <item row="1" column="0">
        <widget class="QLabel" name="componentLabel">
         <property name="text">
-         <string>Component:</string>
+         <string>组件：</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="ctkCheckableComboBox" name="componentCheckableComboBox">
         <property name="toolTip">
-         <string>Select the output components.</string>
+         <string>选择输出组件。</string>
         </property>
        </widget>
       </item>
@@ -148,10 +147,10 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Create centerline models</string>
+        <string>创建中心线模型</string>
        </property>
        <property name="text">
-        <string>Create models</string>
+        <string>创建模型</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -161,12 +160,10 @@
      <item>
       <widget class="ctkMenuButton" name="optionCreateCurvesMenuButton">
        <property name="toolTip">
-        <string>Create centerline curves.
-
-Upon curve creation, the visibility of the names can be specified via the menu.</string>
+        <string>创建中心线曲线。\n\n在创建曲线时，可以通过菜单指定名称的可见性。</string>
        </property>
        <property name="text">
-        <string>Create curves</string>
+        <string>创建曲线</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
@@ -181,10 +178,10 @@ Upon curve creation, the visibility of the names can be specified via the menu.<
       <bool>true</bool>
      </property>
      <property name="toolTip">
-      <string>Run the algorithm.</string>
+      <string>运行算法。</string>
      </property>
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -220,7 +217,7 @@ Upon curve creation, the visibility of the names can be specified via the menu.<
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>CenterlineDisassembly</sender>
