--- a/miniSlicer/SlicerExtension-VMTK/ClipVessel/Resources/UI/ClipVessel.ui
+++ b/miniSlicer/SlicerExtension-VMTK/ClipVessel/Resources/UI/ClipVessel.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ClipVessel</class>
  <widget class="qMRMLWidget" name="ClipVessel">
@@ -14,25 +13,25 @@
    <item row="1" column="0" colspan="2">
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Surface:</string>
+         <string>表面：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="qMRMLNodeComboBox" name="inputSurfaceSelector">
         <property name="toolTip">
-         <string>Input surface model of the tree. If computation is slow adjust preprocessing parameters in advanced section.</string>
+         <string>树的输入表面模型。如果计算速度慢，请在高级部分调整预处理参数。</string>
         </property>
         <property name="nodeTypes">
          <stringlist>
-          <string>vtkMRMLModelNode</string>
-          <string>vtkMRMLSegmentationNode</string>
+          <string>模型节点 (vtkMRMLModelNode)</string>
+          <string>分割节点 (vtkMRMLSegmentationNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -48,14 +47,14 @@
          <bool>true</bool>
         </property>
         <property name="noneDisplay">
-         <string>Select a model or segmentation node</string>
+         <string>选择一个模型或分割节点</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_9">
         <property name="text">
-         <string>Clip points:</string>
+         <string>剪切点：</string>
         </property>
        </widget>
       </item>
@@ -64,18 +63,18 @@
         <item>
          <widget class="qMRMLNodeComboBox" name="clipPointsMarkupsSelector">
           <property name="toolTip">
-           <string>Branch clippoints. The first point is interpreted as the model inlet.</string>
+           <string>分支剪切点。第一个点被解释为模型入口。</string>
           </property>
           <property name="nodeTypes">
            <stringlist>
-            <string>vtkMRMLMarkupsFiducialNode</string>
+            <string>标记基准节点 (vtkMRMLMarkupsFiducialNode)</string>
            </stringlist>
           </property>
           <property name="showChildNodeTypes">
            <bool>false</bool>
           </property>
           <property name="baseName">
-           <string>Clippoints</string>
+           <string>剪切点</string>
           </property>
           <property name="noneEnabled">
            <bool>true</bool>
@@ -95,24 +94,24 @@
          </widget>
         </item>
         <item>
-         <widget class="qSlicerMarkupsPlaceWidget" name="clipPointsMarkupsPlaceWidget"/>
+         <widget class="qSlicerMarkupsPlaceWidget" name="clipPointsMarkupsPlaceWidget" />
         </item>
        </layout>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_10">
         <property name="text">
-         <string>Cap output surface:</string>
+         <string>封闭输出表面：</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
        <widget class="QCheckBox" name="capOutputSurfaceModelCheckBox">
         <property name="toolTip">
-         <string>Cap clipped ends of model</string>
+         <string>封闭模型的剪切端</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
         <property name="checked">
          <bool>false</bool>
@@ -122,18 +121,18 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label1">
         <property name="text">
-         <string>Centerlines:</string>
+         <string>中心线：</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="qMRMLNodeComboBox" name="inputCenterlinesSelector">
         <property name="toolTip">
-         <string>Input centerlines of the tree.</string>
+         <string>树的输入中心线。</string>
         </property>
         <property name="nodeTypes">
          <stringlist>
-          <string>vtkMRMLModelNode</string>
+          <string>模型节点 (vtkMRMLModelNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -149,7 +148,7 @@
          <bool>true</bool>
         </property>
         <property name="noneDisplay">
-         <string>Select a model node</string>
+         <string>选择一个模型节点</string>
         </property>
        </widget>
       </item>
@@ -166,25 +165,25 @@
    <item row="0" column="0">
     <widget class="QLabel" name="parameterSetLabel">
      <property name="text">
-      <string>Paremeter set: </string>
+      <string>参数集：</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="qMRMLNodeComboBox" name="parameterNodeSelector">
      <property name="toolTip">
-      <string>Pick node to store parameter set</string>
+      <string>选择节点以存储参数集</string>
      </property>
      <property name="nodeTypes">
       <stringlist>
-       <string>vtkMRMLScriptedModuleNode</string>
+       <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
       </stringlist>
      </property>
      <property name="showHidden">
       <bool>true</bool>
      </property>
      <property name="baseName">
-      <string>ClipVessel</string>
+      <string>剪切血管</string>
      </property>
      <property name="renameEnabled">
       <bool>true</bool>
@@ -207,24 +206,24 @@
    <item row="2" column="0" colspan="2">
     <widget class="ctkCollapsibleButton" name="outputsCollapsibleButton">
      <property name="text">
-      <string>Outputs</string>
+      <string>输出</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="qMRMLNodeComboBox" name="outputSurfaceModelSelector">
         <property name="toolTip">
-         <string>Result of clipping input model</string>
+         <string>剪切输入模型的结果</string>
         </property>
         <property name="nodeTypes">
          <stringlist>
-          <string>vtkMRMLModelNode</string>
+          <string>模型节点 (vtkMRMLModelNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
          <bool>false</bool>
         </property>
         <property name="baseName">
-         <string>Output surface model</string>
+         <string>输出表面模型</string>
         </property>
         <property name="noneEnabled">
          <bool>true</bool>
@@ -249,7 +248,7 @@
    <item row="3" column="0" colspan="2">
     <widget class="ctkCollapsibleButton" name="advancedCollapsibleButton">
      <property name="text">
-      <string>Advanced</string>
+      <string>高级</string>
      </property>
      <property name="collapsed">
       <bool>true</bool>
@@ -258,17 +257,17 @@
       <item row="0" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Preprocess input surface:</string>
+         <string>预处理输入表面：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QCheckBox" name="preprocessInputSurfaceModelCheckBox">
         <property name="toolTip">
-         <string>Input surface model is reduced to the requested target point count (making computation faster), or subdivided (to make computations more accurate).</string>
+         <string>输入表面模型减少到请求的目标点数（加快计算速度），或细分（以提高计算精度）。</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
         <property name="checked">
          <bool>false</bool>
@@ -278,7 +277,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Target point count:</string>
+         <string>目标点数：</string>
         </property>
         <property name="indent">
          <number>10</number>
@@ -288,7 +287,7 @@
       <item row="1" column="1">
        <widget class="ctkSliderWidget" name="targetKPointCountWidget">
         <property name="toolTip">
-         <string>Preferred number of points in the preprocessed surface.</string>
+         <string>预处理表面中首选的点数。</string>
         </property>
         <property name="decimals">
          <number>1</number>
@@ -306,14 +305,14 @@
          <double>50.000000000000000</double>
         </property>
         <property name="suffix">
-         <string>k</string>
+         <string>千</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Decimation aggressiveness:</string>
+         <string>简化强度：</string>
         </property>
         <property name="indent">
          <number>10</number>
@@ -323,7 +322,7 @@
       <item row="2" column="1">
        <widget class="ctkSliderWidget" name="decimationAggressivenessWidget">
         <property name="toolTip">
-         <string>Lower values preserve the mesh integrity better but it may not be possible to reduce number of points to the desired level.</string>
+         <string>较低的值更好地保持网格完整性，但可能无法将点数减少到所需水平。</string>
         </property>
         <property name="decimals">
          <number>2</number>
@@ -345,7 +344,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Subdivide:</string>
+         <string>细分：</string>
         </property>
         <property name="indent">
          <number>10</number>
@@ -355,17 +354,17 @@
       <item row="3" column="1">
        <widget class="QCheckBox" name="subdivideInputSurfaceModelCheckBox">
         <property name="toolTip">
-         <string>Subdivide the mesh to make computation more accurate (at the cost of increased computation time).</string>
+         <string>细分网格以提高计算精度（以增加计算时间为代价）。</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>Output preprocessed surface:</string>
+         <string>输出预处理表面：</string>
         </property>
         <property name="indent">
          <number>10</number>
@@ -375,18 +374,18 @@
       <item row="4" column="1">
        <widget class="qMRMLNodeComboBox" name="outputPreprocessedSurfaceModelSelector">
         <property name="toolTip">
-         <string>Save preprocessing result. Useful for quality checks and for making repeated computations faster: preprocessed surface can be used as input surface (and &quot;Preprocess input surface&quot; option can then be disabled).</string>
+         <string>保存预处理结果。用于质量检查和加快重复计算：预处理表面可以用作输入表面（然后可以禁用“预处理输入表面”选项）。</string>
         </property>
         <property name="nodeTypes">
          <stringlist>
-          <string>vtkMRMLModelNode</string>
+          <string>模型节点 (vtkMRMLModelNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
          <bool>false</bool>
         </property>
         <property name="baseName">
-         <string>Preprocessed model</string>
+         <string>预处理模型</string>
         </property>
         <property name="noneEnabled">
          <bool>true</bool>
@@ -408,17 +407,17 @@
       <item row="5" column="0">
        <widget class="QLabel" name="label_11">
         <property name="text">
-         <string>Add Flow Extensions:</string>
+         <string>添加流扩展：</string>
         </property>
        </widget>
       </item>
       <item row="5" column="1">
        <widget class="QCheckBox" name="addFlowExtensionsCheckBox">
         <property name="toolTip">
-         <string>Check if flow extensions are desired.</string>
+         <string>检查是否需要流扩展。</string>
         </property>
         <property name="text">
-         <string/>
+         <string />
         </property>
         <property name="checked">
          <bool>false</bool>
@@ -428,7 +427,7 @@
       <item row="6" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Extension length</string>
+         <string>扩展长度</string>
         </property>
         <property name="indent">
          <number>10</number>
@@ -438,7 +437,7 @@
       <item row="6" column="1">
        <widget class="ctkSliderWidget" name="extensionLengthWidget">
         <property name="toolTip">
-         <string>Higher values increase .</string>
+         <string>较高的值增加。</string>
         </property>
         <property name="decimals">
          <number>2</number>
@@ -460,7 +459,7 @@
 	  <item row="7" column="0">
 	   <widget class="QLabel" name="label_3">
 		<property name="text">
-		 <string>Extension mode</string>
+		 <string>扩展模式</string>
 		</property>
 		<property name="indent">
 		 <number>12</number>
@@ -470,7 +469,7 @@
 	  <item row="7" column="1" colspan="3">
 	   <widget class="QComboBox" name="extensionModeComboBox">
 		<property name="toolTip">
-		 <string>Mode for adding flow extension</string>
+		 <string>添加流扩展的模式</string>
 		</property>
 		<property name="editable">
 		 <bool>false</bool>
@@ -483,10 +482,10 @@
    <item row="6" column="0" colspan="2">
     <widget class="QPushButton" name="applyButton">
      <property name="toolTip">
-      <string>Run the algorithm.</string>
+      <string>运行算法。</string>
      </property>
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -553,7 +552,7 @@
    <header>qMRMLSegmentSelectorWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>ClipVessel</sender>
