--- a/miniSlicer/SlicerExtension-VMTK/GuidedArterySegmentation/Resources/UI/GuidedArterySegmentation.ui
+++ b/miniSlicer/SlicerExtension-VMTK/GuidedArterySegmentation/Resources/UI/GuidedArterySegmentation.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GuidedArterySegmentation</class>
  <widget class="qMRMLWidget" name="GuidedArterySegmentation">
@@ -16,7 +15,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="parameterSetLabel">
        <property name="text">
-        <string>Parameter set:</string>
+        <string>参数集：</string>
        </property>
       </widget>
      </item>
@@ -40,21 +39,21 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>A parameter set groups parameters that define a named study distinctly.</string>
+          <string>参数集将定义一个命名研究的参数分组。</string>
          </property>
          <property name="nodeTypes">
           <stringlist notr="true">
-           <string>vtkMRMLScriptedModuleNode</string>
+           <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
           </stringlist>
          </property>
          <property name="showHidden">
           <bool>true</bool>
          </property>
          <property name="hideChildNodeTypes">
-          <stringlist notr="true"/>
+          <stringlist notr="true" />
          </property>
          <property name="baseName">
-          <string notr="true">GuidedArterySegmentation</string>
+          <string notr="true">引导动脉分割</string>
          </property>
          <property name="noneEnabled">
           <bool>false</bool>
@@ -63,7 +62,7 @@
           <bool>true</bool>
          </property>
          <property name="interactionNodeSingletonTag">
-          <string notr="true"/>
+          <string notr="true" />
          </property>
          <property name="selectNodeUponCreation">
           <bool>true</bool>
@@ -85,7 +84,7 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Update the segment editor and the slice views with the input segmentation and volume if any.</string>
+          <string>如果有输入分割和体积，更新分割编辑器和切片视图。</string>
          </property>
          <property name="text">
           <string>↺</string>
@@ -105,32 +104,30 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="inputCurveLabel">
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="text">
-         <string>Input curve:</string>
+         <string>输入曲线：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="qMRMLNodeComboBox" name="inputCurveSelector">
         <property name="toolTip">
-         <string>Pick an input markups curve node.
-
-The control points are assumed to be on the contrasted lumen.</string>
+         <string>选择一个输入标记曲线节点。\n\n控制点假定位于对比的腔道上。</string>
         </property>
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLMarkupsCurveNode</string>
+          <string>标记曲线节点 (vtkMRMLMarkupsCurveNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -156,22 +153,20 @@ The control points are assumed to be on the contrasted lumen.</string>
       <item row="7" column="0">
        <widget class="QLabel" name="tubeDiameterSpinBoxLabel">
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="text">
-         <string>Tube diameter:</string>
+         <string>管径：</string>
         </property>
        </widget>
       </item>
       <item row="7" column="1">
        <widget class="QDoubleSpinBox" name="tubeDiameterSpinBox">
         <property name="toolTip">
-         <string>Specify a value slightly above the maximum estimated diameter of the target artery.
-
-If a Shape::Tube node is specified below, this parameter is ignored.</string>
+         <string>指定一个略高于目标动脉最大估计直径的值。\n\n如果下面指定了 Shape::Tube 节点，则忽略此参数。</string>
         </property>
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="decimals">
          <number>1</number>
@@ -190,21 +185,21 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
       <item row="4" column="0">
        <widget class="QLabel" name="outputSegmentationSelectorLabel">
         <property name="text">
-         <string>Segmentation:</string>
+         <string>分割：</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
        <widget class="qMRMLNodeComboBox" name="outputSegmentationSelector">
         <property name="toolTip">
-         <string>Select an output segmentation</string>
+         <string>选择一个输出分割</string>
         </property>
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLSegmentationNode</string>
+          <string>分割节点 (vtkMRMLSegmentationNode)</string>
          </stringlist>
         </property>
         <property name="noneEnabled">
@@ -226,14 +221,14 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
         <item>
          <widget class="qMRMLNodeComboBox" name="inputSliceNodeSelector">
           <property name="toolTip">
-           <string>Pick a slice view. The background volume node will be used. Please be careful to use the right volume node.</string>
+           <string>选择一个切片视图。将使用背景体积节点。请小心使用正确的体积节点。</string>
           </property>
           <property name="locale">
-           <locale language="English" country="UnitedStates"/>
+           <locale language="English" country="UnitedStates" />
           </property>
           <property name="nodeTypes">
            <stringlist notr="true">
-            <string>vtkMRMLSliceNode</string>
+            <string>切片节点 (vtkMRMLSliceNode)</string>
            </stringlist>
           </property>
           <property name="noneEnabled">
@@ -255,10 +250,10 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
       <item row="2" column="0">
        <widget class="QLabel" name="inputSliceNodeLabel">
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="text">
-         <string>Slice node:</string>
+         <string>切片节点：</string>
         </property>
        </widget>
       </item>
@@ -267,20 +262,20 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
         <item>
          <widget class="QLabel" name="regionInfoLabel">
           <property name="toolTip">
-           <string>Ideally, there should be only one region in the output segment.</string>
+           <string>理想情况下，输出分割中应该只有一个区域。</string>
           </property>
           <property name="text">
-           <string/>
+           <string />
           </property>
          </widget>
         </item>
         <item>
          <widget class="QToolButton" name="fixRegionToolButton">
           <property name="toolTip">
-           <string>If the segment has more than one region, this function replaces the input segment by a new segment having a single region. It is created from the largest region of the input segment.</string>
+           <string>如果分割有多个区域，此功能将用一个具有单个区域的新分割替换输入分割。它是从输入分割的最大区域创建的。</string>
           </property>
           <property name="text">
-           <string>Fix</string>
+           <string>修复</string>
           </property>
          </widget>
         </item>
@@ -298,10 +293,10 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
       </sizepolicy>
      </property>
      <property name="locale">
-      <locale language="English" country="UnitedStates"/>
+      <locale language="English" country="UnitedStates" />
      </property>
      <property name="title">
-      <string>Alternative extent</string>
+      <string>替代范围</string>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -316,8 +311,7 @@ If a Shape::Tube node is specified below, this parameter is ignored.</string>
       <item>
        <widget class="QLabel" name="extentLabel">
         <property name="text">
-         <string>Use a Shape::Tube node to limit the circumferential
-extent, instead of a fixed diameter tube.</string>
+         <string>使用 Shape::Tube 节点来限制周向范围，而不是固定直径的管。</string>
         </property>
        </widget>
       </item>
@@ -326,24 +320,22 @@ extent, instead of a fixed diameter tube.</string>
         <item row="0" column="0">
          <widget class="QLabel" name="inputShapeNodeLabel">
           <property name="text">
-           <string>Tube node:</string>
+           <string>管节点：</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="qMRMLNodeComboBox" name="inputShapeSelector">
           <property name="toolTip">
-           <string>Limit the region of interest to this Shape::Tube node.
-
-If specified, the regular tube diameter above is ignored.</string>
+           <string>将感兴趣区域限制为此 Shape::Tube 节点。\n\n如果指定，则上面的常规管径将被忽略。</string>
           </property>
           <property name="nodeTypes">
            <stringlist notr="true">
-            <string>vtkMRMLMarkupsShapeNode</string>
+            <string>标记形状节点 (vtkMRMLMarkupsShapeNode)</string>
            </stringlist>
           </property>
           <property name="hideChildNodeTypes">
-           <stringlist notr="true"/>
+           <stringlist notr="true" />
           </property>
           <property name="noneEnabled">
            <bool>true</bool>
@@ -358,7 +350,7 @@ If specified, the regular tube diameter above is ignored.</string>
            <bool>true</bool>
           </property>
           <property name="interactionNodeSingletonTag">
-           <string notr="true"/>
+           <string notr="true" />
           </property>
           <property name="selectNodeUponCreation">
            <bool>false</bool>
@@ -379,10 +371,10 @@ If specified, the regular tube diameter above is ignored.</string>
       </sizepolicy>
      </property>
      <property name="locale">
-      <locale language="English" country="UnitedStates"/>
+      <locale language="English" country="UnitedStates" />
      </property>
      <property name="title">
-      <string>Flood filling parameters</string>
+      <string>泛洪填充参数</string>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -400,20 +392,20 @@ If specified, the regular tube diameter above is ignored.</string>
        <item row="0" column="0">
         <widget class="QLabel" name="intensityToleranceLabel">
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="text">
-          <string>Intensity tolerance:</string>
+          <string>强度容忍度：</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QSpinBox" name="intensityToleranceSpinBox">
          <property name="toolTip">
-          <string>Select connected voxels with intensity range between the one at a control point's position +/- this tolerance.</string>
+          <string>选择强度范围在控制点位置 +/- 此容忍度之间的连接体素。</string>
          </property>
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="minimum">
           <number>1</number>
@@ -432,18 +424,17 @@ If specified, the regular tube diameter above is ignored.</string>
        <item row="1" column="0">
         <widget class="QLabel" name="neighbourhoodSizeLabel">
          <property name="text">
-          <string>Neighbourhood size:</string>
+          <string>邻域大小：</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QDoubleSpinBox" name="neighbourhoodSizeDoubleSpinBox">
          <property name="toolTip">
-          <string>Regions are added only if all voxels in the neighbourhood have similar intensities. Use higher values prevent leakage. Use lower values to allow capturing finer details.
-</string>
+          <string>仅当邻域中的所有体素具有相似强度时，才会添加区域。使用较高的值可以防止泄漏。使用较低的值可以捕捉更细的细节。\n</string>
          </property>
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="decimals">
           <number>1</number>
@@ -485,19 +476,17 @@ If specified, the regular tube diameter above is ignored.</string>
    <item>
     <widget class="QCheckBox" name="extractCenterlinesCheckBox">
      <property name="text">
-      <string>Extract centerlines</string>
+      <string>提取中心线</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="ctkMenuButton" name="applyButton">
      <property name="toolTip">
-      <string>Create a segmentation and optionally a centerline model and a centerline curve. Output nodes from the last run will be replaced.
-
-If centerlines are extracted, optionally replace the segment by its largest region if it contains more than one region.</string>
+      <string>创建一个分割，并可选择性地创建中心线模型和中心线曲线。将替换上次运行的输出节点。\n\n如果提取了中心线，可以选择性地用其最大区域替换分割，如果它包含多个区域。</string>
      </property>
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -534,7 +523,7 @@ If centerlines are extracted, optionally replace the segment by its largest regi
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>GuidedArterySegmentation</sender>
