--- a/miniSlicer/SlicerExtension-VMTK/QuickArterySegmentation/Resources/UI/QuickArterySegmentation.ui
+++ b/miniSlicer/SlicerExtension-VMTK/QuickArterySegmentation/Resources/UI/QuickArterySegmentation.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>QuickArterySegmentation</class>
  <widget class="qMRMLWidget" name="QuickArterySegmentation">
@@ -11,7 +10,7 @@
    </rect>
   </property>
   <property name="locale">
-   <locale language="English" country="UnitedStates"/>
+   <locale language="English" country="UnitedStates" />
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -19,7 +18,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="parameterSetLabel">
        <property name="text">
-        <string>Parameter set:</string>
+        <string>参数集：</string>
        </property>
       </widget>
      </item>
@@ -43,21 +42,21 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>A parameter set groups parameters that define a named study distinctly.</string>
+          <string>参数集将定义一个命名研究的参数分组。</string>
          </property>
          <property name="nodeTypes">
           <stringlist notr="true">
-           <string>vtkMRMLScriptedModuleNode</string>
+           <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
           </stringlist>
          </property>
          <property name="showHidden">
           <bool>true</bool>
          </property>
          <property name="hideChildNodeTypes">
-          <stringlist notr="true"/>
+          <stringlist notr="true" />
          </property>
          <property name="baseName">
-          <string notr="true">QuickArterySegmentation</string>
+          <string notr="true">创建一个分割，并可选择生成中心线模型和中心线曲线。上次运行的输出节点将被替换。\n\n如果提取了中心线，可以选择用其最大区域替换分割，如果它包含多个区域。</string>
          </property>
          <property name="noneEnabled">
           <bool>false</bool>
@@ -66,7 +65,7 @@
           <bool>true</bool>
          </property>
          <property name="interactionNodeSingletonTag">
-          <string notr="true"/>
+          <string notr="true" />
          </property>
          <property name="selectNodeUponCreation">
           <bool>true</bool>
@@ -88,7 +87,7 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Update the segment editor and the slice views with the input segmentation and volume if any.</string>
+          <string>如果有输入分割和体积，更新分割编辑器和切片视图。</string>
          </property>
          <property name="text">
           <string>↺</string>
@@ -102,22 +101,20 @@
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="1" column="1">
        <widget class="qMRMLNodeComboBox" name="inputFiducialSelector">
         <property name="toolTip">
-         <string>Pick an input markups fiducial node.
-
-The fiducial points are assumed to be on the contrasted lumen.</string>
+         <string>选择一个输入标记基准节点。\n\n基准点假定位于对比的腔道上。</string>
         </property>
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLMarkupsFiducialNode</string>
+          <string>标记基准节点 (vtkMRMLMarkupsFiducialNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -145,18 +142,18 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
         <item>
          <widget class="qMRMLNodeComboBox" name="inputROISelector">
           <property name="toolTip">
-           <string>Pick an optional ROI node. This may speed up segmentation and centerline extraction. The ROI will be forcibly hidden after completion.</string>
+           <string>选择一个可选的 ROI 节点。这可能会加速分割和中心线提取。完成后 ROI 将被强制隐藏。</string>
           </property>
           <property name="locale">
-           <locale language="English" country="UnitedStates"/>
+           <locale language="English" country="UnitedStates" />
           </property>
           <property name="nodeTypes">
            <stringlist notr="true">
-            <string>vtkMRMLMarkupsROINode</string>
+            <string>标记 ROI 节点 (vtkMRMLMarkupsROINode)</string>
            </stringlist>
           </property>
           <property name="baseName">
-           <string>QuickROI</string>
+           <string>快速 ROI</string>
           </property>
           <property name="noneEnabled">
            <bool>true</bool>
@@ -172,13 +169,13 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
         <item>
          <widget class="QToolButton" name="preFitROIToolButton">
           <property name="toolTip">
-           <string>Set the bounds of the ROI accounting for that of the fiducial node. It must  further be manually adjusted to enclose the target region of interest.</string>
+           <string>设置 ROI 的边界，考虑基准节点的边界。必须进一步手动调整以包围目标感兴趣区域。</string>
           </property>
           <property name="locale">
-           <locale language="English" country="UnitedStates"/>
+           <locale language="English" country="UnitedStates" />
           </property>
           <property name="text">
-           <string>Pre-fit</string>
+           <string>预拟合</string>
           </property>
          </widget>
         </item>
@@ -187,38 +184,38 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
       <item row="5" column="0">
        <widget class="QLabel" name="inputROILabel">
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="text">
-         <string>ROI node:</string>
+         <string>ROI 节点：</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="inputFiducialLabel">
         <property name="locale">
-         <locale language="English" country="UnitedStates"/>
+         <locale language="English" country="UnitedStates" />
         </property>
         <property name="text">
-         <string>Fiducial node:</string>
+         <string>基准节点：</string>
         </property>
        </widget>
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="outputSegmentationSelectorLabel">
         <property name="text">
-         <string>Segmentation:</string>
+         <string>分割：</string>
         </property>
        </widget>
       </item>
       <item row="6" column="1">
        <widget class="qMRMLNodeComboBox" name="outputSegmentationSelector">
         <property name="toolTip">
-         <string>Select an output segmentation</string>
+         <string>选择一个输出分割</string>
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLSegmentationNode</string>
+          <string>分割节点 (vtkMRMLSegmentationNode)</string>
          </stringlist>
         </property>
         <property name="noneEnabled">
@@ -243,14 +240,14 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
         <item>
          <widget class="qMRMLNodeComboBox" name="inputSliceNodeSelector">
           <property name="toolTip">
-           <string>Pick a slice view. The background volume node will be used. Please be careful to use the right volume node.</string>
+           <string>选择一个切片视图。将使用背景体积节点。请小心使用正确的体积节点。</string>
           </property>
           <property name="locale">
-           <locale language="English" country="UnitedStates"/>
+           <locale language="English" country="UnitedStates" />
           </property>
           <property name="nodeTypes">
            <stringlist notr="true">
-            <string>vtkMRMLSliceNode</string>
+            <string>切片节点 (vtkMRMLSliceNode)</string>
            </stringlist>
           </property>
           <property name="noneEnabled">
@@ -272,7 +269,7 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
       <item row="2" column="0">
        <widget class="QLabel" name="inputSliceNodeLabel">
         <property name="text">
-         <string>Slice node:</string>
+         <string>切片节点：</string>
         </property>
        </widget>
       </item>
@@ -281,20 +278,20 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
         <item>
          <widget class="QLabel" name="regionInfoLabel">
           <property name="toolTip">
-           <string>Ideally, there should be only one region in the output segment.</string>
+           <string>理想情况下，输出分割中应该只有一个区域。</string>
           </property>
           <property name="text">
-           <string/>
+           <string />
           </property>
          </widget>
         </item>
         <item>
          <widget class="QToolButton" name="fixRegionToolButton">
           <property name="toolTip">
-           <string>If the segment has more than one region, this function replaces the input segment by a new segment having a single region. It is created from the largest region of the input segment.</string>
+           <string>如果分割有多个区域，此功能将用一个新分割替换输入分割，该新分割只有一个区域。它是从输入分割中最大的区域创建的。</string>
           </property>
           <property name="text">
-           <string>Fix</string>
+           <string>修复</string>
           </property>
          </widget>
         </item>
@@ -312,10 +309,10 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
       </sizepolicy>
      </property>
      <property name="toolTip">
-      <string>Use a parameter set for a distinct study.</string>
+      <string>使用参数集进行独特的研究。</string>
      </property>
      <property name="title">
-      <string>Flood filling parameters</string>
+      <string>泛洪填充参数</string>
      </property>
      <property name="flat">
       <bool>true</bool>
@@ -336,20 +333,20 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
        <item row="0" column="0">
         <widget class="QLabel" name="intensityToleranceLabel">
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="text">
-          <string>Intensity tolerance:</string>
+          <string>强度容忍度：</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QSpinBox" name="intensityToleranceSpinBox">
          <property name="toolTip">
-          <string>Select connected voxels with intensity range between the one at a control point's position +/- this tolerance.</string>
+          <string>选择强度范围在控制点位置 +/- 此容忍度之间的连接体素。</string>
          </property>
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="minimum">
           <number>1</number>
@@ -368,18 +365,17 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
        <item row="1" column="0">
         <widget class="QLabel" name="neighbourhoodSizeLabel">
          <property name="text">
-          <string>Neighbourhood size:</string>
+          <string>邻域大小：</string>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QDoubleSpinBox" name="neighbourhoodSizeDoubleSpinBox">
          <property name="toolTip">
-          <string>Regions are added only if all voxels in the neighbourhood have similar intensities. Use higher values prevent leakage. Use lower values to allow capturing finer details.
-</string>
+          <string>仅当邻域中的所有体素具有相似的强度时，才会添加区域。使用较高的值可以防止泄漏。使用较低的值可以捕捉更细的细节。\n</string>
          </property>
          <property name="locale">
-          <locale language="English" country="UnitedStates"/>
+          <locale language="English" country="UnitedStates" />
          </property>
          <property name="decimals">
           <number>1</number>
@@ -418,15 +414,13 @@ The fiducial points are assumed to be on the contrasted lumen.</string>
    <item>
     <widget class="QCheckBox" name="extractCenterlinesCheckBox">
      <property name="toolTip">
-      <string>Use 'Extract centerline' module to generate a centerline model and a centerline curve.
-
-It is recommended to generate centerlines on accurate segmentations.</string>
+      <string>使用“提取中心线”模块生成中心线模型和中心线曲线。\n\n建议在准确的分割上生成中心线。</string>
      </property>
      <property name="locale">
-      <locale language="English" country="UnitedStates"/>
+      <locale language="English" country="UnitedStates" />
      </property>
      <property name="text">
-      <string>Extract centerlines</string>
+      <string>提取中心线</string>
      </property>
      <property name="checked">
       <bool>false</bool>
@@ -439,12 +433,10 @@ It is recommended to generate centerlines on accurate segmentations.</string>
    <item>
     <widget class="ctkMenuButton" name="applyButton">
      <property name="toolTip">
-      <string>Create a segmentation and optionally a centerline model and a centerline curve. Output nodes from the last run will be replaced.
-
-If centerlines are extracted, optionally replace the segment by its largest region if it contains more than one region.</string>
+      <string>创建一个分割，并可选择生成中心线模型和中心线曲线。上次运行的输出节点将被替换。\n\n如果提取了中心线，可以选择用其最大区域替换分割，如果它包含多个区域。</string>
      </property>
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -481,7 +473,7 @@ If centerlines are extracted, optionally replace the segment by its largest regi
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>QuickArterySegmentation</sender>
