--- a/miniSlicer/SlicerExtension-VMTK/StenosisMeasurement1D/Resources/UI/StenosisMeasurement1D.ui
+++ b/miniSlicer/SlicerExtension-VMTK/StenosisMeasurement1D/Resources/UI/StenosisMeasurement1D.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>StenosisMeasurement1D</class>
  <widget class="qMRMLWidget" name="StenosisMeasurement1D">
@@ -14,24 +13,24 @@
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QFormLayout" name="formLayout_2">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>Input curve:</string>
+         <string>输入曲线：</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="qMRMLNodeComboBox" name="inputMarkupsSelector">
         <property name="toolTip">
-         <string>Pick the input markups curve.</string>
+         <string>选择输入标记曲线。</string>
         </property>
         <property name="nodeTypes">
          <stringlist notr="true">
-          <string>vtkMRMLMarkupsCurveNode</string>
+          <string>标记曲线节点 (vtkMRMLMarkupsCurveNode)</string>
          </stringlist>
         </property>
         <property name="showChildNodeTypes">
@@ -53,7 +52,7 @@
          <bool>true</bool>
         </property>
         <property name="SlicerParameterName" stdset="0">
-         <string notr="true">inputCurveNode</string>
+         <string notr="true">输入曲线节点</string>
         </property>
        </widget>
       </item>
@@ -63,7 +62,7 @@
    <item>
     <widget class="QTableWidget" name="outputTableWidget">
      <property name="toolTip">
-      <string>Result table.</string>
+      <string>结果表。</string>
      </property>
      <property name="wordWrap">
       <bool>false</bool>
@@ -110,7 +109,7 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>StenosisMeasurement1D</sender>
