--- a/miniSlicer/SlicerExtension-VMTK/StenosisMeasurement2D/Resources/UI/StenosisMeasurement2D.ui
+++ b/miniSlicer/SlicerExtension-VMTK/StenosisMeasurement2D/Resources/UI/StenosisMeasurement2D.ui
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>StenosisMeasurement2D</class>
  <widget class="qMRMLWidget" name="StenosisMeasurement2D">
@@ -16,7 +15,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="parameterSetLabel">
        <property name="text">
-        <string>Parameter set:</string>
+        <string>参数集：</string>
        </property>
       </widget>
      </item>
@@ -40,21 +39,21 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>A parameter set groups parameters that define a named study distinctly.</string>
+          <string>参数集将定义一个命名研究的参数分组。</string>
          </property>
          <property name="nodeTypes">
           <stringlist notr="true">
-           <string>vtkMRMLScriptedModuleNode</string>
+           <string>脚本模块节点 (vtkMRMLScriptedModuleNode)</string>
           </stringlist>
          </property>
          <property name="showHidden">
           <bool>true</bool>
          </property>
          <property name="hideChildNodeTypes">
-          <stringlist notr="true"/>
+          <stringlist notr="true" />
          </property>
          <property name="baseName">
-          <string notr="true">StenosisMeasurement2D</string>
+          <string notr="true">狭窄测量2D</string>
          </property>
          <property name="noneEnabled">
           <bool>false</bool>
@@ -63,7 +62,7 @@
           <bool>true</bool>
          </property>
          <property name="interactionNodeSingletonTag">
-          <string notr="true"/>
+          <string notr="true" />
          </property>
          <property name="selectNodeUponCreation">
           <bool>true</bool>
@@ -85,7 +84,7 @@
           </size>
          </property>
          <property name="toolTip">
-          <string>Update the segment editor with the input segmentation.</string>
+          <string>使用输入分割更新分割编辑器。</string>
          </property>
          <property name="text">
           <string>↺</string>
@@ -99,7 +98,7 @@
    <item>
     <widget class="ctkCollapsibleButton" name="inputsCollapsibleButton">
      <property name="text">
-      <string>Inputs</string>
+      <string>输入</string>
      </property>
      <layout class="QVBoxLayout" name="inputsVerticalLayout">
       <item>
@@ -118,18 +117,18 @@
           <item row="0" column="0">
            <widget class="QLabel" name="inputSliceNodeLabel">
             <property name="text">
-             <string>Slice node:</string>
+             <string>切片节点：</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
            <widget class="qMRMLNodeComboBox" name="inputSliceNodeSelector">
             <property name="toolTip">
-             <string>Select an input slice view.</string>
+             <string>选择输入切片视图。</string>
             </property>
             <property name="nodeTypes">
              <stringlist notr="true">
-              <string>vtkMRMLSliceNode</string>
+              <string>切片节点 (vtkMRMLSliceNode)</string>
              </stringlist>
             </property>
             <property name="noneEnabled">
@@ -145,27 +144,25 @@
              <bool>false</bool>
             </property>
             <property name="SlicerParameterName" stdset="0">
-             <string notr="true">inputSliceNode</string>
+             <string notr="true">输入切片节点</string>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="inputFiducialLabel">
             <property name="text">
-             <string>Fiducial:</string>
+             <string>基准点：</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="qMRMLNodeComboBox" name="inputFiducialSelector">
             <property name="toolTip">
-             <string>Select an input markups fiducial list.
-
-Clicking at a control point allows to track the slice orientation in the selected slice node, on top of the usual jump behaviour. This tracking is scene-wide only, it is not saved with the scene.</string>
+             <string>选择输入标记基准点列表。\n\n点击控制点可以在选定的切片节点中跟踪切片方向，除了通常的跳转行为。此跟踪仅在场景范围内有效，不会随场景保存。</string>
             </property>
             <property name="nodeTypes">
              <stringlist notr="true">
-              <string>vtkMRMLMarkupsFiducialNode</string>
+              <string>标记基准点节点 (vtkMRMLMarkupsFiducialNode)</string>
              </stringlist>
             </property>
             <property name="noneEnabled">
@@ -187,21 +184,21 @@ Clicking at a control point allows to track the slice orientation in the selecte
              <bool>false</bool>
             </property>
             <property name="SlicerParameterName" stdset="0">
-             <string notr="true">inputFiducialNode</string>
+             <string notr="true">输入基准点节点</string>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="inputSegmentLabel">
             <property name="text">
-             <string>Segmentation:</string>
+             <string>分割：</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="qMRMLSegmentSelectorWidget" name="inputSegmentSelector">
             <property name="toolTip">
-             <string>Select an input segmentation.</string>
+             <string>选择输入分割。</string>
             </property>
             <property name="noneEnabled">
              <bool>true</bool>
@@ -224,9 +221,7 @@ Clicking at a control point allows to track the slice orientation in the selecte
    <item>
     <widget class="QTableWidget" name="presentationTableWidget">
      <property name="toolTip">
-      <string>Result table.
-
-Right click for more.</string>
+      <string>结果表。\n\n右键单击以获取更多信息。</string>
      </property>
     </widget>
    </item>
@@ -249,7 +244,7 @@ Right click for more.</string>
    <item>
     <widget class="ctkMenuButton" name="applyButton">
      <property name="text">
-      <string>Apply</string>
+      <string>应用</string>
      </property>
     </widget>
    </item>
@@ -285,7 +280,7 @@ Right click for more.</string>
    <header>qMRMLSegmentSelectorWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources />
  <connections>
   <connection>
    <sender>StenosisMeasurement2D</sender>
